--- a/miniDust/Base.lproj/Main.storyboard
+++ b/miniDust/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ZPI-EA-imY">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ZPI-EA-imY">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -7,36 +7,6 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--정보-->
-        <scene sceneID="8aq-Af-mRS">
-            <objects>
-                <viewController id="wNz-wc-xCG" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="0Hw-AR-sQL"/>
-                        <viewControllerLayoutGuide type="bottom" id="iI7-Fj-dgC"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="vQp-hI-TuX">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chart.png" translatesAutoresizingMaskIntoConstraints="NO" id="Qr8-7L-mXg">
-                                <rect key="frame" x="0.0" y="20" width="600" height="531"/>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="Qr8-7L-mXg" firstAttribute="bottom" secondItem="iI7-Fj-dgC" secondAttribute="top" id="CIt-GX-WtT"/>
-                            <constraint firstItem="Qr8-7L-mXg" firstAttribute="leading" secondItem="vQp-hI-TuX" secondAttribute="leading" id="Duo-36-OeL"/>
-                            <constraint firstAttribute="trailing" secondItem="Qr8-7L-mXg" secondAttribute="trailing" id="lXC-Qr-SHA"/>
-                            <constraint firstItem="Qr8-7L-mXg" firstAttribute="top" secondItem="0Hw-AR-sQL" secondAttribute="bottom" id="zFR-yv-e3j"/>
-                        </constraints>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="정보" image="Info30x30.png" id="SYA-qf-Cfs"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="mjI-eK-wQF" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1624" y="-1436"/>
-        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Awk-Il-UTp">
             <objects>
@@ -54,12 +24,59 @@
                         <segue destination="oeL-9e-6o3" kind="relationship" relationship="viewControllers" id="eeq-Kp-ZTG"/>
                         <segue destination="50V-59-ENW" kind="relationship" relationship="viewControllers" id="M1B-dM-eEm"/>
                         <segue destination="8S1-8a-sLU" kind="relationship" relationship="viewControllers" id="2VF-Jk-rcY"/>
-                        <segue destination="wNz-wc-xCG" kind="relationship" relationship="viewControllers" id="nGw-vs-hhQ"/>
+                        <segue destination="ZSZ-o4-EkS" kind="relationship" relationship="viewControllers" id="xpH-iQ-vXf"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zNP-XT-Gul" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1608" y="46"/>
+        </scene>
+        <!--미세먼지 정보-->
+        <scene sceneID="rb9-ZW-lRK">
+            <objects>
+                <navigationController id="ZSZ-o4-EkS" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="미세먼지 정보" image="Info30x30.png" selectedImage="Info30x30.png" id="H5v-Uw-acW"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="seh-CY-5y7">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="TP0-Nf-WVW" kind="relationship" relationship="rootViewController" id="5xi-QK-MG3"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="n76-3Z-ksJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1994" y="-1421"/>
+        </scene>
+        <!--미세먼지 등급 기준표-->
+        <scene sceneID="a06-at-q0p">
+            <objects>
+                <viewController id="TP0-Nf-WVW" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="8Gr-BR-biJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="Hmr-hm-KYa"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Lqz-ie-RGO">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="chart.png" translatesAutoresizingMaskIntoConstraints="NO" id="qfd-Os-WlY">
+                                <rect key="frame" x="10" y="64" width="580" height="487"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="qfd-Os-WlY" firstAttribute="leading" secondItem="Lqz-ie-RGO" secondAttribute="leadingMargin" id="Ngg-GU-x6j"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="qfd-Os-WlY" secondAttribute="trailing" id="eN6-Sv-blD"/>
+                            <constraint firstItem="Hmr-hm-KYa" firstAttribute="top" secondItem="qfd-Os-WlY" secondAttribute="bottom" id="jAd-99-o2e"/>
+                            <constraint firstItem="qfd-Os-WlY" firstAttribute="top" secondItem="8Gr-BR-biJ" secondAttribute="bottom" id="xAe-Nk-pdr"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="미세먼지 등급 기준표" id="TdD-Eh-GbV"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qmx-8v-VJs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1280" y="-1439"/>
         </scene>
         <!--위치조회-->
         <scene sceneID="286-kh-SSv">
@@ -78,7 +95,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pLi-Ak-5dG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1624" y="-715"/>
+            <point key="canvasLocation" x="-1616" y="-720"/>
         </scene>
         <!--위치 조회-->
         <scene sceneID="woM-ha-tU8">
